...
            android:src="@drawable/delete_icon"
            android:layout_alignTop="@id/profilePicturePlaceholder"
            android:layout_alignStart="@id/profilePicturePlaceholder"/>


        <EditText
            android:id="@+id/fullNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profilePicturePlaceholder"
            android:layout_marginTop="24dp"
            android:hint="Full Name"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/homepageInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fullNameInput"
            android:layout_marginTop="16dp"
            android:hint="Homepage"
            android:inputType="textUri"/>
...
            android:layout_below="@id/homepageInput"
            android:layout_marginTop="16dp"
            android:text="Contact Information"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/mobileNumberInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/contactInfoText"
            android:layout_marginTop="16dp"
            android:hint="Mobile Number"
            android:inputType="phone"/>

        <EditText
            android:id="@+id/emailAddressInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mobileNumberInput"
            android:layout_marginTop="16dp"
            android:hint="Email Address"
            android:inputType="textEmailAddress"/>
...
            android:layout_below="@+id/emailAddressInput"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="36dp"
            android:text="Notifications" />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/event_dashboard_admin_expand_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/admin_panel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- FAB for the first action -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/event_dashboard_admin_image_search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/event_dashboard_admin_expand_button"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            android:src="@drawable/baseline_image_search_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/event_dashboard_admin_event_search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/event_dashboard_admin_image_search_button"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            android:src="@drawable/baseline_checklist_rtl_24" />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/event_dashboard_admin_profile_user_search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/event_dashboard_admin_event_search_button"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:visibility="gone"
...
