...
            app:layout_constraintTop_toBottomOf="@id/banner_upload_button"
            style="@style/Widget.MaterialComponents.LinearProgressIndicator"
            android:indeterminate="false"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/edit_text_event_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
...
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/banner_upload_button" />

        <EditText
            android:id="@+id/edit_text_event_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
...
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_event_title" />

        <EditText
            android:id="@+id/edit_text_event_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
...
            android:inputType="textPostalAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_event_description" />

        <TextView
            android:id="@+id/text_event_start_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="?attr/editTextBackground"
...
            android:focusable="false"
            android:gravity="center_vertical"
            android:hint="Start Date"
            android:inputType="date"
            android:textAppearance="?android:attr/textAppearanceMediumInverse"
            android:textColor="?attr/editTextColor"
            app:layout_constraintEnd_toStartOf="@+id/text_event_start_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_event_address" />

        <TextView
            android:id="@+id/text_event_start_time"
            android:layout_width="0dp"
...
            android:textColor="?attr/editTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_event_start_date"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_event_address" />

        <TextView
            android:id="@+id/text_event_end_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="?attr/editTextBackground"
...
            android:focusable="false"
            android:gravity="center_vertical"
            android:hint="End Date"
            android:inputType="date"
            android:textAppearance="?android:attr/textAppearanceMediumInverse"
            android:textColor="?attr/editTextColor"
            app:layout_constraintEnd_toStartOf="@+id/text_event_end_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_event_start_date" />

        <TextView
            android:id="@+id/text_event_end_time"
            android:layout_width="0dp"
...
            android:text="Reuse Promo QR Code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reuse_checkin_button" />

        <Button
            android:id="@+id/create_event_confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
...
