...
    <string name="welcomeMsg">Welcome to Quick Scan Quest Pro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_event_button_string">Create Event</string>
    <string name="browse_events_button_string">Browse Events</string>
    <string name="events_list_title">My Events</string>
    <string name="browse_events_dashboard_title">Browse Events</string>
    <string name="profile_list_title">Profile List</string>
    <string name="attendee_list">Attendees</string>

    // The following strings are used in the EventDetailsFragment
    <string name="event_title">This is the title of the event</string>
    <string name="what_text">What?</string>
    <string name="event_description">This is where the description of the event will go. It will be a long string of text that will be displayed in a TextView.</string>
    <string name="when_text">When?</string>
    <string name="event_date">This will be the date and time of the event.</string>
    <string name="where_text">Where?</string>
    <string name="event_location">This will be the location of the event.</string>
    <string name="event_announcements_text">Announcements</string>
    <string name="upload_picture">This button can be invoked to add profile picture</string>
    <string name="back">This button is invoked to go back to event details fragment from profile fragment</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"
...
