...
        android:src="@drawable/baseline_image_search_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_dashboard_admin_user_search_button"
        android:layout_marginTop="8dp"/>-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/event_dashboard_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_dashboard_title"
        app:layout_constraintBottom_toTopOf="@id/event_dashboard_create_button">
    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/event_dashboard_create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/create_event_button_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/event_dashboard_browse_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/event_dashboard_browse_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
